--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,6 +26,30 @@ $bgColor:#fff;
     }
 }
 
+.logo-title{
+    font-family: $font-logo;
+            font-weight: 900;
+            font-size:4rem;
+            text-transform: capitalize;
+            margin:2rem 0;
+            @media screen and (min-width:768px) {
+                font-size:8rem;
+                margin-top:10rem;
+            }   
+}
+.list-list__ul{
+    display:flex;
+    gap:1rem;
+    list-style:none;
+    justify-content: center;
+    a{
+        color:$textColor;
+        text-decoration: none;
+        font-size:1.3rem;
+    }
+
+}
+
 //start the header specific the navbar
 
 #navbar{
@@ -146,8 +170,6 @@ $bgColor:#fff;
 // start the about section 
 #about{
      padding:2rem 1rem;
-     display:grid;
-     grid-template-columns: 50% 50%;
     .text-about__container{
         padding-bottom:1.8rem;
         h1{
@@ -180,6 +202,76 @@ $bgColor:#fff;
 
     @media screen and (min-width:768px) {
         padding:2rem 16rem;
+        display:grid;
+        grid-template-columns: 50% 50%;
+        align-items: center;
+        gap:2rem;
     }
 
+}
+
+
+//start the sections links 
+
+.sections{
+    width:100%;
+    min-height:100vh;
+    background-size:cover;
+    background-position:center;
+    position:relative;
+    $images: 01, 02, 03, 04;
+    @each $var in $images {
+        &.box-0#{$var}{
+            background-image:url(../images/img-0#{$var}.jpg);
+        }
+    }
+    .overlay{
+      width:100%;
+      height:100%;
+      position:absolute;
+      top:0;
+      left:0;
+      background:rgba(0, 0, 0, 0.2);
+    }
+    .text-section{
+        position:absolute;
+        top:50%;
+        left:50%;
+        transform: translate(-50%, -50%);
+        width:100%;
+        text-align: center;
+        font-size:1.5rem;
+
+        h2 a{
+            color:$bgColor;
+            font-family: $font_family;
+            font-weight:900;
+            text-transform: uppercase;
+            text-decoration: underline;
+        }
+    }
+}
+
+
+//start the footer 
+
+footer{
+    padding:2rem 0;
+    background:$textColor;
+    h1{
+       text-align: center;
+       color:$bgColor;
+    }
+    .list-list__ul{
+        a{
+            color:$bgColor;
+        }
+    }
+    .copyright{
+        text-align: center;
+        color:$bgColor;
+        margin:2rem 0;
+        font-family: $font_family;
+        font-weight:300;
+    }
 }
